# learning-tauri

./: .gitignore  Cargo.toml  docker-compose.yaml
migrations/: 20230930222451_create_initial_database.down.sql  20230930222451_create_initial_database.up.sql
server/: Cargo.toml  Dockerfile
server/src/: auth.rs  main.rs
server/static/: index.html
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
