[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
hex-literal = "0.4.1"
scylla = "0.9.0"
pretty_env_logger = "0.5"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio = {"version" = "1", features = ["full"]}
tokio-stream = "0.1"
pbkdf2 = "0.12.2"
sha2 = "0.10"
sqlx = "0.7"
warp = "0.3"
